Updates environment variable examples.

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,10 @@
+NEXT_PUBLIC_NAME="Your Name"
+NEXT_PUBLIC_ROLE="Engineering Manager & Frontend Developer"
 NEXT_PUBLIC_EMAIL=email@example.com
 NEXT_PUBLIC_PHONE=+1 234 567 8900
 NEXT_PUBLIC_WEBSITE=https://example.com
 NEXT_PUBLIC_CONTACT_PAGE=https://example.com/contact 
+NEXT_PUBLIC_PRIMARY_RESUME_URL="/path/to/resume.pdf"
+NEXT_PUBLIC_PRIMARY_COVER_LETTER_URL="/path/to/cover-letter-em.pdf"
+NEXT_PUBLIC_SECONDARY_RESUME_URL="/path/to/resume.pdf"
+NEXT_PUBLIC_SECONDARY_COVER_LETTER_URL="/path/to/cover-letter-fd.pdf" 
